@@ -53,11 +53,13 @@ without intervening fixed characters.
 Added wx.SearchCtrl, which is a composite of a wx.TextCtrl with optional
 bitmap buttons and a drop-down menu.  Controls like this can typically
 be found on a toolbar of applications that support some form of search
-functionality.  On the Mac this control is implemneted using the
+functionality.  On the Mac this control is implemented using the
 native HISearchField control, on the other platforms a generic control
 is used, although that may change in the future as more platforms
 introduce native search widgets.
 
+Added a set of button classes to wx.lib.buttons from David Hughes that
+uses the native renderer to draw the button.
 
 
 
